Updated the website with new features and resume

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="assets\Suhas_Motagi_Database_Developer_resume.pdf">
+                <a href="assets\Suhas_CV.pdf">
                     <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                 </a>
 
