Updated the website with new features and resume

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire Me</button>
-                        <a href="assets\Suhas_Motagi_Database_Developer_resume.pdf">
+                        <a href="assets\Suhas_CV.pdf">
                             <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                         </a>
 
@@ -139,7 +139,7 @@
 
                             </p>
                             <div class="about-btn">
-                                <a href="assets\Suhas_Motagi_Database_Developer_resume.pdf">
+                                <a href="assets\Suhas_CV.pdf">
                                     <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                                 </a>
                             </div>
