updated my portfolio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/title_image.jpg" type="image/x-icon">
 
     <title>Portfolio | Suhas Motagi</title>
     <script type="text/javascript"
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="assets\Suhas_CV.pdf">
+                <a href="assets\js\Suhas_motagi_CV.pdf">
                     <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                 </a>
 
@@ -79,15 +79,24 @@
                         <p>I'm <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info" style="text-align: justify;">
-                        <p>A dedicated Database Developer with a Master’s in Computer Applications, I specialize in designing,
-                            managing, and optimizing databases. Proficient in PostgreSQL, PL/SQL, and SQL, I focus on efficient data
-                            handling and improving query performance. Passionate about continuous learning, I contribute effectively to
-                            software development projects and thrive in collaborative team environments.
+                        <p>A dedicated Software Developer with a Master’s in Computer Applications, 
+                            I specialize in backend development, API design, and database management. 
+                            Proficient in Python frameworks like FastAPI and Flask, 
+                            I build scalable and efficient RESTful APIs. 
+                            With expertise in PostgreSQL, PL/SQL, and SQL, 
+                            I ensure optimized data handling and performance.
+                        </p>
+                        <p>
+                            I have hands-on experience with Postman for API testing, 
+                            software architecture, and cloud integration, 
+                            making me adept at full-cycle software development. 
+                            Passionate about problem-solving and continuous learning, 
+                            I thrive in collaborative team environments and contribute effectively to innovative projects.
                         </p>
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire Me</button>
-                        <a href="assets\Suhas_CV.pdf">
+                        <a href="assets\js\Suhas_motagi_CV.pdf">
                             <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                         </a>
 
@@ -102,7 +111,7 @@
                             <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
                         </a>
 
-                        <a href="https://github.com/SuhasMotagi/dashboard.git" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/SuhasMotagi" target="_blank" rel="noopener noreferrer">
                             <div class="icon"><i class="uil uil-github-alt"></i></div>
                         </a>
                     </div>
@@ -139,7 +148,7 @@
 
                             </p>
                             <div class="about-btn">
-                                <a href="assets\Suhas_CV.pdf">
+                                <a href="assets\js\Suhas_motagi_CV.pdf">
                                     <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
                                 </a>
                             </div>
@@ -152,7 +161,9 @@
                             </div>
                             <div class="skills-list">
                                 <span>JavaScript</span>
-                                <span>Bootstrap</span>
+                                <span>React</span>
+                                <span>Typescript</span>
+                                <span>NextJS</span>
                                 <span>HTML</span>
                                
                             </div>
@@ -162,7 +173,7 @@
                                 <h3>Backend</h3>
                             </div>
                             <div class="skills-list">
-                                <span>Python</span>
+                                <span>Python(Flask,FastApi)</span>
                                 <span>JAVA</span>
                             </div>
                         </div>
@@ -190,9 +201,10 @@
                 <div class="project-container">
                     <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
-                        <h3>Completed</h3>
+                        <h3>Projects</h3>
                         <label>VENDOR-BRIDGE: HIRING PORTAL</label>
                         <label>CAFETERIA MANAGEMENT</label>
+                        <label>3HSCARE- OT Booking</label>
                     </div>
                     <div class="project-box">
                         <i class="uil uil-users-alt"></i>
