--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@
                     </div>
                     <div class="project-box">
                         <i class="uil uil-utensils"></i>
-                        <h3>NutriNest</h3>
+                        <h3>FitBites</h3>
                         <p>Nutrition & Meal Planner</p>
                         <ul class="project-features">
-                            <li>Full-stack development with React and FastAPI</li>
+                            <li>Implemented personalized meal planning</li>
                             <li>Implemented order tracking system</li>
-                            <li>Designed inventory management module</li>
+                            <li>Designed nutrition tracking dashboard</li>
                         </ul>
                     </div>
                 </div>
